--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
                 url('https://cdn.jsdelivr.net/gh/webfontworld/kopus/KoPubWorldDotumBold.woff2') format('woff2'),
                 url('https://cdn.jsdelivr.net/gh/webfontworld/kopus/KoPubWorldDotumBold.woff') format('woff'),
                 url('https://cdn.jsdelivr.net/gh/webfontworld/kopus/KoPubWorldDotumBold.ttf') format("truetype");}
+         @font-face {
+    	font-family: 'ABC Ginto Nord Condensed Unlicensed Trial Thin Italic';
+    	font-style: normal;
+   	 	font-weight: normal;
+    	src: local('ABC Ginto Nord Condensed Unlicensed Trial Thin Italic'), url('ABCGintoNordCondensed-ThinItalic-Trial-BF651b7b77267c8.woff') format('woff');
+   		}
+   		 @font-face {
+    font-family: 'ABC Ginto Nord Unlicensed Trial Light';
+    font-style: normal;
+    font-weight: normal;
+    src: local('ABC Ginto Nord Unlicensed Trial Light'), url('ABCGintoNord-Light-Trial-BF651b7b774e227.woff') format('woff');
+    }
+    
+
  		@font-face {
             font-family: 'ABC Ginto Nord';
             font-weight: 200;
